--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato|Patrick+Hand|Roboto+Slab|Staatliches&display=swap" rel="stylesheet">
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Norman Ed</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
