--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Norman Ed</title>
+
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init("%REACT_APP_EMAILJS_USERID%");
+      })();
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
