--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,8 @@
     -->
     <title>Norman Ed</title>
 
-    <script type="text/javascript"
+    <!-- Load emailJS SDK -->
+    <script typ>e="text/javascript"
     src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
     </script>
     <script type="text/javascript">
