--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,14 +34,12 @@
     <title>Norman Ed</title>
 
     <!-- Load emailJS SDK -->
-    <script typ>e="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-      (function(){
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
+      <script type="text/javascript">
+        (function(){
           emailjs.init("%REACT_APP_EMAILJS_USERID%");
-      })();
-    </script>
+        })();
+      </script>
 
   </head>
   <body>
