--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,14 @@
     -->
     <title>Norman Ed</title>
 
-    <!-- Load emailJS SDK -->
+    <!-- Load reCaptcha API -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+    <!-- Load emailJS SDK, with hard coded username -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js">
       <script type="text/javascript">
         (function(){
-          emailjs.init("%REACT_APP_EMAILJS_USERID%");
+          emailjs.init("user_cVacpT4HoGWc7Omos0X8P");
         })();
       </script>
 
