--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link href="https://fonts.googleapis.com/css?family=Lato|Patrick+Hand|Roboto+Slab|Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Slab|Staatliches&display=swap" rel="stylesheet">
     
     <!--
       manifest.json provides metadata used when your web app is installed on a
